package dataLayer.file.daos;

public class AbstactDaoSqlite {
}
