package dataLayer.services;

public interface IDataLayer {
}
